exports[`Input with listeners matches snapshot 1`] = `
<div
  className="input-field col s12">
  <input
    className=""
    id="test"
    name="test_input"
    onChange={[Function bound _onChange]}
    onMouseEnter={[Function bound _onMouseEnter]}
    onMouseLeave={[Function bound _onMouseLeave]}
    placeholder=""
    type="text" />
  <label
    dangerouslySetInnerHTML={
      Object {
        "__html": "test label"
      }
    }
    data-error=""
    data-success=""
    htmlFor="test" />
</div>
`;

exports[`Input with value matches snapshot 1`] = `
<div
  className="input-field col s12">
  <input
    className=""
    id="test"
    name="test_input"
    onChange={[Function bound _onChange]}
    onMouseEnter={[Function bound _onMouseEnter]}
    onMouseLeave={[Function bound _onMouseLeave]}
    placeholder=""
    type="text" />
  <label
    dangerouslySetInnerHTML={
      Object {
        "__html": "test label"
      }
    }
    data-error=""
    data-success=""
    htmlFor="test" />
</div>
`;

exports[`Input without listeners matches snapshot 1`] = `
<div
  className="input-field col s12">
  <input
    className="validate "
    id="test"
    name="test_input"
    onChange={[Function bound _onChange]}
    onMouseEnter={[Function bound _onMouseEnter]}
    onMouseLeave={[Function bound _onMouseLeave]}
    placeholder=""
    type="text" />
  <label
    dangerouslySetInnerHTML={
      Object {
        "__html": "test label"
      }
    }
    data-error="wrong"
    data-success="correct"
    htmlFor="test" />
</div>
`;
